<resources>
    <string name="app_name">GAe</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>
    <string name="management_of_absences">management of absences</string>
    <string name="e_mail">E-mail</string>
    <string name="address_e_mail">Address e-mail</string>
    <string name="submit">Submit</string>
    <string name="ii1f">II1F</string>
    <string name="ii1e">II1E</string>
    <string name="ii1d">II1D</string>
    <string name="ii1c">II1C</string>
    <string name="ii1b">II1B</string>
    <string name="ii1a">II1A</string>
    <string name="economie_et_gestion_d_entreprise">Economie et gestion d’entreprise</string>
    <string name="math_matique_de_l_ing_nieur">Mathématique de l’ingénieur</string>
    <string name="anglais">Anglais</string>
    <string name="fran_ais">Français</string>
    <string name="circuits_num_riques">Circuits numériques</string>
    <string name="electronique_analogique">Electronique analogique</string>
    <string name="algorithmique_num_rique">Algorithmique numérique</string>
    <string name="logique_formelle">Logique formelle</string>
    <string name="th_orie_des_langages">Théorie des langages</string>
    <string name="transmission_num_rique">Transmission numérique</string>
    <string name="introduction_aux_syst_mes_d_exploitation_et_environnement_unix">Introduction aux systèmes d’exploitation et environnement Unix</string>
    <string name="architecture_micro_processeurs"><![CDATA[Architecture & micro processeurs]]></string>
    <string name="probabilit_s_appliqu_es">Probabilités appliquées</string>
    <string name="programmation_web_et_multim_dia">Programmation web et multimédia</string>
    <string name="algorithmique_de_graphes_et_optimisation">Algorithmique de graphes et optimisation</string>
    <string name="programmation_orient_e_objet">Programmation orientée objet</string>
    <string name="projet_de_programmation">Projet de programmation</string>
    <string name="checkbox">CheckBox</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="id_card">ID_Card</string>
    <string name="female">female</string>
    <string name="male">Male</string>
    <string name="surname">Surname</string>
    <string name="first_name">First name</string>
    <string name="choice_your_classes">Choice your classes</string>
    <string name="algorithmique">Algorithmique</string>
</resources>